# grabble

./: .gitignore  .python-version  README.md  json-graph-schema-v2.1.json  json-graph-schema-v2.json  mkdocs.yml  pyproject.toml
docs/: index.md
grabble/: __init__.py  array.py  base.py  graphdataframe.py  incidence.py  types.py
grabble/DEPRECATED/pandas-ext/: __init__.py  array.py  frame.py
grabble/DEPRECATED/type-tetris/polymorphic-edges/: jsongraph.py  relations.py  roles.py
grabble/DEPRECATED/type-tetris/runtime-incidences/: __coconut__.py  beartypeable.py  grabble-spec.coco  grabble-spec.py
notebooks/: Untitled.ipynb  beartyped-static-frames.ipynb  grabble-example.ipynb  grabble-example.py  grabble-testing.py  graphblas_testing.ipynb  nb-env.yml  pandas-categoricals.ipynb  python_decorator.ipynb  sparse-ops.ipynb  typetetris.ipynb
notebooks/levi/: __init__.py  dataframe.py  series.py
tests/: test_grabble.py
