[tool.poetry]
name = "grabble"
version = "0.1.0"
description = ""
authors = ["Thurston Sexton <thurston.sexton@nist.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.2"
DeepGraph = "^0.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
taskipy = "^1.8.1"
mkdocs-material = "^7.2.5"
mkdocs-with-pdf = "^0.9.3"
poetry-dynamic-versioning = "^0.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
