[tool.poetry]
name = "grabble"
version = "0.1.0"
description = ""
authors = ["Rachael Sexton <rtbs@nist.gov>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scipy = "^1.9.0"
phantom-types = "^0.17.1"
beartype = "^0.11.0"
static-frame = "^0.9.20"
attrs = "^22.1.0"
bidict = "^0.22.0"
cytoolz = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
taskipy = "^1.8.1"
mkdocs-material = "^7.2.5"
mkdocs-with-pdf = "^0.9.3"
poetry-dynamic-versioning = "^0.13.1"
datamodel-code-generator = "^0.13.0"
seaborn = "^0.11.2"
mypy = "^0.971"
pandas = "^1.3.2"
networkx = "^2.8.5"
graphviz = "^0.20.1"
ipykernel = "^6.19.2"


[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
plugins = [
    "pydantic.mypy",
    "classes.contrib.mypy.classes_plugin"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
